{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 209,
  "lineage": "eb6b6dd8-a74b-ad4e-a5fe-e5db2398b394",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webapp-instance-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f58b397bc5c1f2e8",
            "arn": "arn:aws:ec2:ap-south-1:905418014070:instance/i-01b8f9005cc47cc8a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01b8f9005cc47cc8a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "webapp-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0491432b6d0537ddc",
            "private_dns": "ip-10-10-0-34.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.34",
            "public_ip": "3.109.49.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09fe5ff88112ec5f2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0afbae725c6684d95",
            "tags": {
              "Name": "Webapp-machine1"
            },
            "tags_all": {
              "Name": "Webapp-machine1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04cc20be3f50cb67a"
            ]
          },
          "dependencies": [
            "aws_key_pair.webapp-key",
            "aws_security_group.allow_22_80",
            "aws_subnet.webapp-subnet-1a",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webapp-instance-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f58b397bc5c1f2e8",
            "arn": "arn:aws:ec2:ap-south-1:905418014070:instance/i-087aabc0038870c21",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-087aabc0038870c21",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "webapp-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08d73078569b46280",
            "private_dns": "ip-10-10-1-14.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.14",
            "public_ip": "65.2.150.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c974a9bebb08cf5a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-049b402ab8391aa99",
            "tags": {
              "Name": "Webapp-machine2"
            },
            "tags_all": {
              "Name": "Webapp-machine2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04cc20be3f50cb67a"
            ]
          },
          "dependencies": [
            "aws_key_pair.webapp-key",
            "aws_security_group.allow_22_80",
            "aws_subnet.webapp-subnet-1b",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "webapp-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418014070:internet-gateway/igw-0d537523121bd1eb7",
            "id": "igw-0d537523121bd1eb7",
            "owner_id": "905418014070",
            "tags": {
              "Name": "Webapp-internet-GW"
            },
            "tags_all": {
              "Name": "Webapp-internet-GW"
            },
            "vpc_id": "vpc-00dae96ddcc89b900"
          },
          "dependencies": [
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "webapp-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:905418014070:loadbalancer/app/webapp-alb/eaf94bc32ce0d728",
            "arn_suffix": "app/webapp-alb/eaf94bc32ce0d728",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "webapp-alb-1578064382.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:905418014070:loadbalancer/app/webapp-alb/eaf94bc32ce0d728",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "webapp-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-004c9d030b7ad174e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-049b402ab8391aa99"
              },
              {
                "subnet_id": "subnet-0afbae725c6684d95"
              }
            ],
            "subnets": [
              "subnet-049b402ab8391aa99",
              "subnet-0afbae725c6684d95"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-00dae96ddcc89b900",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.allow_80",
            "aws_subnet.webapp-subnet-1a",
            "aws_subnet.webapp-subnet-1b",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "webapp-alb-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:905418014070:loadbalancer/app/webapp-alb-2/12a285a29678683c",
            "arn_suffix": "app/webapp-alb-2/12a285a29678683c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "webapp-alb-2-1997774474.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:905418014070:loadbalancer/app/webapp-alb-2/12a285a29678683c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "webapp-alb-2",
            "preserve_host_header": false,
            "security_groups": [
              "sg-004c9d030b7ad174e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-049b402ab8391aa99"
              },
              {
                "subnet_id": "subnet-0afbae725c6684d95"
              }
            ],
            "subnets": [
              "subnet-049b402ab8391aa99",
              "subnet-0afbae725c6684d95"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-00dae96ddcc89b900",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.allow_80",
            "aws_subnet.webapp-subnet-1a",
            "aws_subnet.webapp-subnet-1b",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "webapp_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:905418014070:listener/app/webapp-alb/eaf94bc32ce0d728/0c503b7d882e45bf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:905418014070:targetgroup/webapp-target-group/216a78f5e398b6c1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:905418014070:listener/app/webapp-alb/eaf94bc32ce0d728/0c503b7d882e45bf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:905418014070:loadbalancer/app/webapp-alb/eaf94bc32ce0d728",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.webapp-alb",
            "aws_lb_target_group.webapp-target-group",
            "aws_security_group.allow_80",
            "aws_subnet.webapp-subnet-1a",
            "aws_subnet.webapp-subnet-1b",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "webapp_listener_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:905418014070:listener/app/webapp-alb-2/12a285a29678683c/95c304f20fc5c244",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:905418014070:targetgroup/webapp-target-group-2/f86603004c4e4e1f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:905418014070:listener/app/webapp-alb-2/12a285a29678683c/95c304f20fc5c244",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:905418014070:loadbalancer/app/webapp-alb-2/12a285a29678683c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.webapp-alb-2",
            "aws_lb_target_group.webapp-target-group_2",
            "aws_security_group.allow_80",
            "aws_subnet.webapp-subnet-1a",
            "aws_subnet.webapp-subnet-1b",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "webapp-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:905418014070:targetgroup/webapp-target-group/216a78f5e398b6c1",
            "arn_suffix": "targetgroup/webapp-target-group/216a78f5e398b6c1",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:905418014070:targetgroup/webapp-target-group/216a78f5e398b6c1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:905418014070:loadbalancer/app/webapp-alb/eaf94bc32ce0d728"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "webapp-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00dae96ddcc89b900"
          },
          "dependencies": [
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "webapp-target-group_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:905418014070:targetgroup/webapp-target-group-2/f86603004c4e4e1f",
            "arn_suffix": "targetgroup/webapp-target-group-2/f86603004c4e4e1f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:905418014070:targetgroup/webapp-target-group-2/f86603004c4e4e1f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:905418014070:loadbalancer/app/webapp-alb-2/12a285a29678683c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "webapp-target-group-2",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00dae96ddcc89b900"
          },
          "dependencies": [
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "webapp-target-group-attach1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:905418014070:targetgroup/webapp-target-group/216a78f5e398b6c1-20240703013345989200000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:905418014070:targetgroup/webapp-target-group/216a78f5e398b6c1",
            "target_id": "i-01b8f9005cc47cc8a"
          },
          "dependencies": [
            "aws_instance.webapp-instance-1",
            "aws_key_pair.webapp-key",
            "aws_lb_target_group.webapp-target-group",
            "aws_security_group.allow_22_80",
            "aws_subnet.webapp-subnet-1a",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "webapp-target-group-attach2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:905418014070:targetgroup/webapp-target-group/216a78f5e398b6c1-20240703013346086700000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:905418014070:targetgroup/webapp-target-group/216a78f5e398b6c1",
            "target_id": "i-087aabc0038870c21"
          },
          "dependencies": [
            "aws_instance.webapp-instance-2",
            "aws_key_pair.webapp-key",
            "aws_lb_target_group.webapp-target-group",
            "aws_security_group.allow_22_80",
            "aws_subnet.webapp-subnet-1b",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "webapp-private-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418014070:route-table/rtb-01f9a11669809eb02",
            "id": "rtb-01f9a11669809eb02",
            "owner_id": "905418014070",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "webapp-private-RT"
            },
            "tags_all": {
              "Name": "webapp-private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-00dae96ddcc89b900"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "webapp-public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418014070:route-table/rtb-0c21afb929ef43673",
            "id": "rtb-0c21afb929ef43673",
            "owner_id": "905418014070",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d537523121bd1eb7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "webapp-public-RT"
            },
            "tags_all": {
              "Name": "webapp-public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-00dae96ddcc89b900"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.webapp-IGW",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT_asso_subnet_1_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01fa38376b2358873",
            "route_table_id": "rtb-0c21afb929ef43673",
            "subnet_id": "subnet-0afbae725c6684d95"
          },
          "dependencies": [
            "aws_internet_gateway.webapp-IGW",
            "aws_route_table.webapp-public-RT",
            "aws_subnet.webapp-subnet-1a",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT_asso_subnet_2_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008b0855150b0d200",
            "route_table_id": "rtb-0c21afb929ef43673",
            "subnet_id": "subnet-049b402ab8391aa99"
          },
          "dependencies": [
            "aws_internet_gateway.webapp-IGW",
            "aws_route_table.webapp-public-RT",
            "aws_subnet.webapp-subnet-1b",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT_asso_subnet_3_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9dcb386c346af74",
            "route_table_id": "rtb-01f9a11669809eb02",
            "subnet_id": "subnet-02ee2c4aa957b5f3e"
          },
          "dependencies": [
            "aws_route_table.webapp-private-RT",
            "aws_subnet.webapp-subnet-1c",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_22_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418014070:security-group/sg-04cc20be3f50cb67a",
            "description": "Allow TLS inbound traffic 80 and 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04cc20be3f50cb67a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_22_80",
            "name_prefix": "",
            "owner_id": "905418014070",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_22_80"
            },
            "tags_all": {
              "Name": "allow_22_80"
            },
            "timeouts": null,
            "vpc_id": "vpc-00dae96ddcc89b900"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418014070:security-group/sg-004c9d030b7ad174e",
            "description": "Allow TLS inbound traffic 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-004c9d030b7ad174e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_80",
            "name_prefix": "",
            "owner_id": "905418014070",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_80"
            },
            "tags_all": {
              "Name": "allow_80"
            },
            "timeouts": null,
            "vpc_id": "vpc-00dae96ddcc89b900"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "webapp-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418014070:subnet/subnet-0afbae725c6684d95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0afbae725c6684d95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418014070",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "webapp-subnet-1a"
            },
            "tags_all": {
              "Name": "webapp-subnet-1a"
            },
            "vpc_id": "vpc-00dae96ddcc89b900"
          },
          "dependencies": [
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "webapp-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418014070:subnet/subnet-049b402ab8391aa99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049b402ab8391aa99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418014070",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "webapp-subnet-1b"
            },
            "tags_all": {
              "Name": "webapp-subnet-1b"
            },
            "vpc_id": "vpc-00dae96ddcc89b900"
          },
          "dependencies": [
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "webapp-subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418014070:subnet/subnet-02ee2c4aa957b5f3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ee2c4aa957b5f3e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418014070",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "webapp-subnet-1c"
            },
            "tags_all": {
              "Name": "webapp-subnet-1c"
            },
            "vpc_id": "vpc-00dae96ddcc89b900"
          },
          "dependencies": [
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "webapp-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418014070:vpc/vpc-00dae96ddcc89b900",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-07640dd12577fc5a6",
            "default_route_table_id": "rtb-009c0cbb77e6ab597",
            "default_security_group_id": "sg-00bb193172edac93c",
            "dhcp_options_id": "dopt-05d129e7f1e0fc150",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00dae96ddcc89b900",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-009c0cbb77e6ab597",
            "owner_id": "905418014070",
            "tags": {
              "Name": "Webapp-VPC"
            },
            "tags_all": {
              "Name": "Webapp-VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418014070:security-group-rule/sgr-0caacebf9c0461d30",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0caacebf9c0461d30",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04cc20be3f50cb67a",
            "security_group_rule_id": "sgr-0caacebf9c0461d30",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_22_80",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_outbound_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418014070:security-group-rule/sgr-01fe16392cbe82bea",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-01fe16392cbe82bea",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-004c9d030b7ad174e",
            "security_group_rule_id": "sgr-01fe16392cbe82bea",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_80",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_outbound_traffic_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418014070:security-group-rule/sgr-03813ee275c471bef",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": null,
            "id": "sgr-03813ee275c471bef",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04cc20be3f50cb67a",
            "security_group_rule_id": "sgr-03813ee275c471bef",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_22_80",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_outbound_traffic_ipv6_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418014070:security-group-rule/sgr-04855ec6ae13369ed",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": null,
            "id": "sgr-04855ec6ae13369ed",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-004c9d030b7ad174e",
            "security_group_rule_id": "sgr-04855ec6ae13369ed",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_80",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418014070:security-group-rule/sgr-0d4a49e65a1a67556",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0d4a49e65a1a67556",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04cc20be3f50cb67a",
            "security_group_rule_id": "sgr-0d4a49e65a1a67556",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_22_80",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418014070:security-group-rule/sgr-02278349a4b1365a2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-02278349a4b1365a2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04cc20be3f50cb67a",
            "security_group_rule_id": "sgr-02278349a4b1365a2",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_22_80",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_80_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418014070:security-group-rule/sgr-00537274cb01b8e59",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-00537274cb01b8e59",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-004c9d030b7ad174e",
            "security_group_rule_id": "sgr-00537274cb01b8e59",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_80",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    }
  ]
}